--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,4 @@
-[default]
-hostfile = ./ricochet-hosts
-roles_path = ./roles
+[defaults]
+hosts = localhost
+hostfile = ./hosts
+command_warnings = True
