--- a/packages/casks.yml
+++ b/packages/casks.yml
@@ -63,45 +63,5 @@
     - vmware-fusion
     - wireshark
     - xscope
-    # - acorn
-    # - adium
-    # - adobe-creative-cloud
-    # - adobe-photoshop-lightroom
-    # - airmail
-    # - appcleaner
-    # - appium
-    # - blender
-    # - brackets
-    # - caffeine
-    # - dash
-    # - gifrocket
-    # - hiss
-    # - inkscape
-    # - istumbler
-    # - kaleidoscope
-    # - kiwi
-    # - layervault
-    # - librecad
-    # - licecap
-    # - macbreakz
-    # - mailplane
-    # - manager
-    # - moom
-    # - openscad
-    # - owncloud
-    # - p4merge
-    # - paparazzi!
-    # - rightzoom
-    # - selfcontrol
-    # - shuttle
-    # - sketch
-    # - slate
-    # - sparrow
-    # - spotify
-    # - synergy
-    # - textmate
-    # - things
-    # - thunderbird
-    # - trailer
-    # - wedge
-    # - xmind
+- name: Ensure Alfred’s scopes include cask apps
+  shell: brew cask alfred link
