--- a/packages/casks.yml
+++ b/packages/casks.yml
@@ -26,6 +26,7 @@
     - handbrake
     - imageoptim
     - istat-menus
+    - istumbler
     - iterm2
     - keyboard-cleaner
     - karabiner # used to be called keyremap4macbook
