--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -49,7 +49,8 @@
 [credential]
 	helper = /opt/boxen/bin/boxen-git-credential
 [filter "media"]
-	clean = git-media-clean %f
-	smudge = git-media-smudge %f
+	required = true
+	clean = git media clean %f
+	smudge = git media smudge %f
 [push]
 	default = simple
