--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -24,7 +24,7 @@
 	excludesfile = /opt/boxen/config/git/gitignore
 	autocrlf = input
 	quotepath = false
-	editor = atom --wait
+	editor = vim
 [apply]
 	whitespace = nowarn
 [format]
