--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -54,3 +54,7 @@
 	smudge = git media smudge %f
 [push]
 	default = simple
+[filter "lfs"]
+	clean = git lfs clean %f
+	smudge = git lfs smudge %f
+	required = true
