--- a/packages/casks.yml
+++ b/packages/casks.yml
@@ -5,65 +5,33 @@
     - alfred
     - appcleaner
     - arq
-    # - atom
-    # - bartender
-    # - bettertouchtool
     - calibre
     - chicken
     - cloud
-    # - coda
-    # - colloquy
-    # - cyberduck
     - daisydisk
     - dropbox
     - ffmpegx
     - firefox
     - flux
     - gfxcardstatus
-    # - github # Installed by boxen
-    # - gitx
-    # - google-chrome # Needs to be moved to /Application folder, so better install manually.
-    # - gravit
     - handbrake
     - imageoptim
-    # - istat-menus
     - istumbler
     - iterm2
     - keyboard-cleaner
-    - karabiner # used to be called keyremap4macbook
-    # - libreoffice
+    # - karabiner # used to be called keyremap4macbook
     - little-snitch
-    # - macdown
-    # - macvim
-    - node-webkit
     - nosleep
-    # - omnifocus
-    - omnigraffle
-    - omnioutliner
-    # - onepassword
-    # - opera
-    # - rdio
-    # - rescuetime
     - screenhero
-    - seil
+    - seil # used to be called PCKeyboardHack
     - sequel-pro
     - sizeup
     - skype
-    # - slack
-    - sourcetree
-    # - sublime-text
-    # - synergy
-    # - the-unarchiver
+    - slack
     - torbrowser
     - transmission
     - transmit
-    - truecrypt
     - vagrant
     - virtualbox
-    # - viscosity
+    - viscosity
     - vlc
-    # - vmware-fusion
-    # - wireshark
-    - xscope
-- name: Ensure Alfred’s scopes include cask apps
-  shell: brew cask alfred link
