--- a/packages/atom.yml
+++ b/packages/atom.yml
@@ -15,7 +15,7 @@
     - git-log
     - git-plus
     - git-tab-status
-    - hightlight-column
+    - highlight-column
     - merge-conflicts
     - minimap
     - project-manager
