--- a/packages/casks.yml
+++ b/packages/casks.yml
@@ -5,7 +5,7 @@
     - alfred
     - appcleaner
     - arq
-    - calibre
+    - calibre # TODO Also sudo ln -s /opt/homebrew-cask/Caskroom/calibre/latest/calibre.app/Contents/MacOS/ebook-convert /usr/local/bin
     - chicken
     - cloud
     - daisydisk
@@ -14,6 +14,7 @@
     - firefox
     - flux
     - gfxcardstatus
+    - gitbook
     - handbrake
     - imageoptim
     - istumbler
