add sinology apps to casks

--- a/packages/casks.yml
+++ b/packages/casks.yml
@@ -34,6 +34,9 @@
     - sizeup
     - skype
     - slack
+    - synology-assistant
+    - synology-cloud-station
+    - synology-photo-station-uploader
     - torbrowser
     - transmission
     - transmit
