--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -35,5 +35,18 @@ bind -r _ resize-pane -D 5
 bind -r - resize-pane -L 5
 bind -r = resize-pane -R 5
 
-# Status bar
-source ~/.powerline/powerline/bindings/tmux/powerline.conf
+# ############################
+# # TMP: Tmux Plugin Manager #
+# ############################
+#
+# # List of plugins
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+#
+# # Other examples:
+# # set -g @plugin 'github_username/plugin_name'
+# # set -g @plugin 'git@github.com/user/plugin'
+# # set -g @plugin 'git@bitbucket.com/user/plugin'
+#
+# # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# run '~/.tmux/plugins/tpm/tpm'
