--- a/packages/brews.yml
+++ b/packages/brews.yml
@@ -1,10 +1,25 @@
 ---
-- name: Update Homebrew first
+
+- name: check homebrew prefix
+  command: brew --prefix
+  register: brew_prefix
+
+- name: check time of last update
+  command: git log -1 --format="%ct" HEAD
+  args:
+    chdir: { brew_prefix }
+  register: timestamp
+  always_run: yes
+
+- name: conditionally update homebrew
   homebrew: update_homebrew=yes
+  when: ansible_date_time.epoch|int - timestamp.stdout|int > 60 * 60 * 24
+
 # - homebrew_tap: tap=caskroom/cask
 # - homebrew_tap: tap=homebrew/services
 # - homebrew_tap: tap=homebrew/versions
 - homebrew_tap: tap=homebrew/dupes
+
 - name: Install Homebrew Packages
   homebrew: name={{ item }}
   with_items:
