--- a/packages/casks.yml
+++ b/packages/casks.yml
@@ -35,9 +35,9 @@
     - sizeup
     - skype
     - slack
-    - synology-assistant
-    - synology-cloud-station
-    - synology-photo-station-uploader
+    # - synology-assistant
+    # - synology-cloud-station # This isn’t working for some reason.
+    # - synology-photo-station-uploader
     - torbrowser
     - transmission
     - transmit
