RBENV_ROOT isn’t a thing without boxen

--- a/packages/gems.yml
+++ b/packages/gems.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install Ruby Gems
-  gem: name={{ item }} state=latest user_install=no executable="{{ lookup('env','RBENV_ROOT') }}/shims/gem"
+  gem: name={{ item }} state=latest user_install=no executable="{{ lookup('env','HOME') }}/.rbenv/shims/gem"
   notify: rbenv rehash
   with_items:
     - maid
