install maid daemon as launch agent

--- a/packages/resources.yml
+++ b/packages/resources.yml
@@ -2,8 +2,11 @@
 - name: Put Karabiner (formerly KeyRemap4MacBook) private.xml in place
   template: src=./resources/karabiner/private.xml dest=~/Library/Application Support/Karabiner/private.xml
 
-- name: Install the Solarized Dark theme for iTerm
-  shell: open "./resources/iterm/Solarized Dark.itermcolors"
+# - name: Install the Solarized Dark theme for iTerm
+#   shell: open "./resources/iterm/Solarized Dark.itermcolors"
+#
+# - name: Install the Solarized Dark theme for Terminal
+#   shell: open "./resources/terminal/Solarized Dark.terminal"
 
-- name: Install the Solarized Dark theme for Terminal
-  shell: open "./resources/terminal/Solarized Dark.terminal"
+- name: Install Maid launch daemon
+  template: src=./resources/maid/benjaminoakes.maid.plist dest=~/Library/LaunchAgents/benjaminoakes.maid.plist
