--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -59,3 +59,9 @@
 	clean = git lfs clean %f
 	smudge = git lfs smudge %f
 	required = true
+[pager]
+	log = diff-highlight | less
+	show = diff-highlight | less
+	diff = diff-highlight | less
+[commit]
+	gpgsign = true
